Fixed skills alignment issues

--- a/src/Components/Skills.scss
+++ b/src/Components/Skills.scss
@@ -6,12 +6,6 @@
   h1 {
     margin-bottom: 20px;
   }
-  .icon {
-    font-size: 40px;
-    position: absolute;
-    top: 920px;
-    right: 60px;
-  }
   .body-text {
     margin-bottom: 30px;
   }
@@ -50,21 +44,27 @@
         border-top: 1px solid #274472;
         margin: 10px;
         padding: 2%;
-        div {
+        .icon-container {
           margin-top: 30px;
           font-size: 8pt;
           width: 80px;
-          height: 100px;
+          height: 120px;
           display: flex;
           flex-direction: column;
-          justify-content: space-around;
+          justify-content: space-between;
           align-self: center;
           padding: 2%;
-          img {
-            align-self: center;
-            margin: -10px;
-            height: auto;
-            width: 100%;
+          .icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            img {
+              align-self: center;
+              margin: -10px;
+              height: auto;
+              width: 100%;
+            }
           }
         }
       }
